RESOLVED FIXED 289408
[JSC] Debug assertion failed after 291766@main
https://bugs.webkit.org/show_bug.cgi?id=289408
Summary [JSC] Debug assertion failed after 291766@main
Sosuke Suzuki
Reported 2025-03-08 09:23:27 PST
stress/v8-typedarray-resizablearraybuffer.js.default: ``` ERROR: Unchecked JS exception: This scope can throw a JS exception: getPropertySlot @ /home/sosukesuzuki/ghq/github.com/WebKit /WebKit/Source/JavaScriptCore/runtime/JSObjectInlines.h:132 (ExceptionScope::m_recursionDepth was 4) But the exception was unchecked as of this scope: get @ /home/sosukesuzuki/ghq/github.com/WebKi t/WebKit/Source/JavaScriptCore/runtime/JSObject.h:1634 (ExceptionScope::m_recursionDepth was 4) ```
Attachments
Sosuke Suzuki
Comment 1 2025-03-08 09:25:33 PST
EWS
Comment 2 2025-03-09 00:46:41 PST
Committed 291858@main (662cdccd8338): <https://commits.webkit.org/291858@main> Reviewed commits have been landed. Closing PR #42136 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-03-09 00:47:15 PST
Note You need to log in before you can comment on or make changes to this bug.