[JSC] Debug assertion failed for `Array#copyWithin` https://bugs.webkit.org/show_bug.cgi?id=289408

Reviewed by Yusuke Suzuki.

This patch fixes debug assertion failed after 291766@main.

* JSTests/stress/array-prototype-copyWithin-rab-BigInt64.js: Added.
* Source/JavaScriptCore/runtime/ArrayPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/291858@main